# showmydir

./: .gitignore  LICENSE  README.md  pyproject.toml
showmydir/: __main__.py  config.py  customExceptions.py  helper_main.py
showmydir-syntax/: CHANGELOG.md  LICENSE.md  README.md  package.json  vsc-extension-quickstart.md
showmydir-syntax/syntaxes/: showmydir.tmLanguage.json
showmydir-syntax/themes/: showmydir-color-theme.json
showmydir/tree/: ignore.py  renderer.py  scanner.py  smd.py  utils.py
